unpackaged/main/default/objects/litify_pm__Expense__c/litify_pm__Expense__c.object-meta.xml
<CustomObject>
    <label>Expense</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Expense ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>