unpackaged/main/default/objects/litify_pm__Expense__c/fields/Financials_Expenses_Due_To_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Financials_Expenses_Due_To_Vendors__c</fullName>
    <description>This field controls which expenses show as due to vendors on the financial configurations</description>
    <formula>litify_pm__lit_Amount_Due__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field controls which expenses show as due to vendors on the financial configurations</inlineHelpText>
    <label>Financials - Expenses Due To Vendors</label>
    <type>Checkbox</type>
</CustomField>