unpackaged/main/default/objects/litify_pm__Expense__c/fields/Financials_Expenses_Paid_by_Firm__c.field-meta.xml
<CustomField>
    <fullName>Financials_Expenses_Paid_by_Firm__c</fullName>
    <description>This field controls which expenses show in the &#39;Expenses Paid by Firm&#39; section in Litify Financials</description>
    <formula>litify_pm__lit_Reductions__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field controls which expenses show in the &#39;Expenses Paid by Firm&#39; section in Litify Financials</inlineHelpText>
    <label>Financials - Expenses Paid by Firm</label>
    <type>Checkbox</type>
</CustomField>