unpackaged/main/default/objects/litify_pm__Expense__c/fields/Internal_Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Internal_Law_Firm__c</fullName>
    <formula>litify_pm__Matter__r.Internal_Law_Firm__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Law Firm</label>
    <type>Text</type>
</CustomField>