unpackaged/main/default/objects/litify_pm__Expense__c/fields/litify_ext__Payee_Party__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Payee_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee (Party)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>