unpackaged/main/default/objects/litify_pm__Expense__c/fields/litify_pm__Amount__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>