unpackaged/main/default/objects/litify_pm__Expense__c/fields/litify_pm__Bill__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Bill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill</label>
    <referenceTo>litify_pm__Bill__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>