unpackaged/main/default/objects/litify_pm__Expense__c/fields/litify_pm__Expense_Description__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Expense_Description__c</fullName>
    <label>Expense Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>