unpackaged/main/default/objects/litify_pm__Expense__c/fields/litify_pm__Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Expense_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is deprecated. Use `TaskType__c` instead</description>
    <label>Expense Type (Deprecated)</label>
    <referenceTo>litify_pm__Task_Type__c</referenceTo>
    <relationshipLabel>Expenses Desprecated</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>