unpackaged/main/default/objects/litify_pm__Expense__c/fields/litify_pm__ExpenseType2__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__ExpenseType2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Expense_Type__c object. Use this field to set Expense Type</description>
    <label>Expense Type</label>
    <referenceTo>litify_pm__Expense_Type__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>