unpackaged/main/default/objects/litify_pm__Expense__c/fields/litify_pm__lit_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Amount_Due__c</fullName>
    <description>Total amount due after factoring in reductions and amount paid.</description>
    <formula>litify_pm__Amount__c - litify_pm__lit_Reductions__c -  litify_pm__lit_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>