unpackaged/main/default/objects/litify_pm__Expense__c/fields/litify_pm__lit_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Amount_Paid__c</fullName>
    <description>Stores the amount paid to the expense, reduces amount due</description>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>