unpackaged/main/default/objects/litify_pm__Expense__c/fields/litify_pm__lit_Matter_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Matter_Display_Name__c</fullName>
    <formula>litify_pm__Matter__r.litify_pm__Display_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matter Display Name</label>
    <type>Text</type>
</CustomField>