unpackaged/main/default/objects/litify_pm__Expense__c/fields/litify_pm__lit_Payee__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person to whome money is paid or is to be paid.</description>
    <label>Payee (Deprecated)</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2)</booleanFilter>
        <errorMessage>Only roles related to this matter can be associated with this record.</errorMessage>
        <filterItems>
            <field>$Source.litify_pm__Matter__c</field>
            <operation>equals</operation>
            <valueField>litify_pm__Role__c.litify_pm__Matter__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.litify_pm__Matter__c</field>
            <operation>notEqual</operation>
            <value />
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>litify_pm__Role__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>