unpackaged/main/default/objects/litify_pm__Expense__c/fields/litify_pm__lit_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Type_Name__c</fullName>
    <formula>litify_pm__ExpenseType2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Name</label>
    <type>Text</type>
</CustomField>