unpackaged/main/default/objects/litify_pm__Expense__c/fields/litify_pm__Note__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Note__c</fullName>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>