unpackaged/main/default/objects/litify_pm__Expense__c/fields/litify_pm__Status__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unpaid</fullName>
                <default>true</default>
                <label>Unpaid</label>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>