unpackaged/main/default/objects/litify_pm__Expense__c/fields/litify_pm__TaskType__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__TaskType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Task_Type__c object. Use this field to set Task Type</description>
    <label>Task Type</label>
    <referenceTo>litify_pm__Task_Type__c</referenceTo>
    <relationshipLabel>Expenses (Task Type)</relationshipLabel>
    <relationshipName>Expenses1</relationshipName>
    <type>Lookup</type>
</CustomField>