unpackaged/main/default/objects/litify_pm__Expense__c/fields/litify_tso_Matter_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_tso_Matter_Display_Name__c</fullName>
    <description>Populated by process and used as secondary field for search layouts.</description>
    <label>Matter Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>