unpackaged/main/default/objects/litify_pm__Expense__c/fields/Reimbursed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reimbursed_Amount__c</fullName>
    <label>Reimbursed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>