unpackaged/main/default/objects/litify_pm__Expense__c/fields/Reimbursed_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Reimbursed_Amount_Due__c</fullName>
    <formula>litify_pm__lit_Reductions__c - Reimbursed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reimbursed Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>