unpackaged/main/default/objects/litify_pm__Expense__c/listViews/litify_pm__Current_Matter.listView-meta.xml
<ListView>
    <fullName>litify_pm__Current_Matter</fullName>
    <columns>NAME</columns>
    <columns>litify_pm__Amount__c</columns>
    <columns>litify_pm__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Current Matter</label>
</ListView>